# cdc-hudi-lakehouse

./: .gitignore  Makefile  README.md  avro_to_json.py  docker-compose.yml  drop_tables.py  generate_clickstream.py  pyproject.toml  query_data.py
src/: main.py  table_configs.py
src/hudi_config/: base_hudi_options.py  cow_options.py  mor_options.py
src/utils/: get_message_schema.py  hudi_writer.py
