[project]
name = "cdc-hudi-lakehouse"
version = "0.1.0"
description = ""
authors = [
    {name = "Varun Asija",email = "asija.varun92@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker (>=37.4.0,<38.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pyspark (==3.5.6)"
]

[tool.poetry]
packages = [{include = "click_stream", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
